# ferrum-movegen

./: Cargo.toml  README.md  benchmark.ps1
.cargo/: config.toml
examples/: basic_movegen.rs  bitboard_basics.rs  fen_parsing.rs  move_making.rs  perft.rs
src/: lib.rs
src/attacks/: between.rs  king.rs  knight.rs  mod.rs  pawn.rs  rays.rs
src/attacks/magic/: bishop.rs  mod.rs  pext.rs  rook.rs
src/bitboard/: display.rs  iter.rs  mod.rs  ops.rs  simd.rs
src/board/: fen.rs  make_move.rs  mod.rs  zobrist.rs
src/movegen/: king.rs  knights.rs  legality.rs  mod.rs  moves.rs  pawns.rs  sliders.rs
src/testing/: mod.rs  perft.rs  positions.rs
src/types/: castling.rs  direction.rs  mod.rs  piece.rs  square.rs
tests/: validate_with_python.py
